# otter_ros

./: CITATION.bib  LICENSE  README.md
otter_control/: README.md  package.xml  setup.cfg  setup.py
otter_control/launch/: otter_heading_control_launch.py  otter_nmpc_launch.py
otter_control/otter_control/: los_head_controller.py  nmpc_controller.py
otter_msgs/: CMakeLists.txt  README.md  package.xml
otter_msgs/msg/: BilateralStatus.msg  COGSOG.msg  ControllerErrors.msg  ExtCmdStation.msg  OtterStatus.msg  OtterTime.msg
otter_ros/: README.md  package.xml  setup.cfg  setup.py
otter_ros/config/: otterUSV.yaml  sbg_ellipseD.yaml  vlp16_params.yaml
otter_ros/launch/: input_sine_example.py  input_step_example.py  otter_base_launch.py  otter_full_launch.py  otter_static_transforms_launch.py  sbg_imu_debug.py  velodyne_puck_debug.py
otter_ros/otter_ros/: otter_publisher.py  otter_subscriber.py  otter_tf2_broadcaster.py  sinusoid_input.py  step_input.py
otter_ros/pynmeagps/: _version.py  nmeahelpers.py  nmeamessage.py  nmeatypes_core.py  nmeatypes_get.py  nmeatypes_set.py
